--- a/index.html
+++ b/index.html
@@ -1,157 +1,140 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Md. Mahmodul Hasan - Certified Safety Specialist Portfolio" />
+  <meta name="keywords" content="Mahmodul Hasan, Safety Specialist, Portfolio, IOSH, OSHA" />
+  <meta name="author" content="Md. Mahmodul Hasan" />
   <title>Md. Mahmodul Hasan</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" />
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Roboto', sans-serif;
       margin: 0;
-      padding: 0;
-      background-color: #f5faff;
-      color: #333;
-      scroll-behavior: smooth;
+      background: #f0f8ff;
+      color: #003366;
     }
-    .container {
-      padding: 20px;
-      max-width: 800px;
-      margin: 0 auto;
-    }
-    .profile {
+    header {
+      background: #003366;
+      color: white;
+      padding: 2rem;
       text-align: center;
     }
-    .profile img {
+    nav a {
+      margin: 0 1rem;
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    section {
+      padding: 2rem;
+      border-bottom: 1px solid #cce;
+    }
+    h2 {
+      color: #003366;
+    }
+    .profile-pic {
       width: 150px;
       border-radius: 50%;
-    }
-    .social-links {
-      margin-top: 30px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 15px;
+      margin: 1rem auto;
+      display: block;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     }
     .social-links a {
-      font-size: 20px;
+      margin-right: 1rem;
       text-decoration: none;
-      color: #007bff;
-      transition: color 0.3s;
+      color: #003366;
+      font-weight: bold;
     }
-    .social-links a:hover {
-      color: #0056b3;
-    }
-    .cv-button {
-      margin-top: 40px;
-      text-align: center;
-    }
-    .cv-button a {
-      background-color: #007bff;
+    .btn {
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 0.5rem 1rem;
+      background: #003366;
       color: white;
-      padding: 10px 20px;
       text-decoration: none;
       border-radius: 5px;
-    }
-    .footer {
-      margin-top: 60px;
-      border-top: 1px solid #ccc;
-      text-align: center;
-      padding: 20px;
-      font-size: 14px;
-      color: #666;
-    }
-    .section {
-      margin-top: 60px;
-    }
-    .section h2 {
-      color: #007bff;
-      text-align: center;
-    }
-    .testimonials {
-      background-color: #e9f5ff;
-      padding: 20px;
-      border-radius: 10px;
-    }
-    .testimonial {
-      margin-bottom: 15px;
-      font-style: italic;
-    }
-    .contact-form {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-    .contact-form input,
-    .contact-form textarea {
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      font-size: 16px;
-    }
-    .contact-form button {
-      background-color: #007bff;
-      color: white;
-      padding: 10px;
-      border: none;
-      border-radius: 5px;
-      font-size: 16px;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="profile">
-      <img src="profile.jpg" alt="Md. Mahmodul Hasan" />
-      <h1>Md. Mahmodul Hasan</h1>
-      <p>Certified Safety Specialist | BBA in Management</p>
-    </div><div class="social-links">
-  <a href="https://www.linkedin.com/in/mahmodul-hasan-0283262b9" target="_blank">
-    <i class="fab fa-linkedin"></i> LinkedIn
-  </a>
-  <a href="https://www.instagram.com/mahmodul_93" target="_blank">
-    <i class="fab fa-instagram"></i> Instagram
-  </a>
-  <a href="https://x.com/mmahmodul24" target="_blank">
-    <i class="fab fa-x-twitter"></i> X (Twitter)
-  </a>
-  <a href="https://facebook.com" target="_blank">
-    <i class="fab fa-facebook"></i> Facebook
-  </a>
-</div>
+  <header>
+    <h1>Md. Mahmodul Hasan</h1>
+    <p>Certified Safety Specialist</p>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#certifications">Certifications</a>
+      <a href="#experience">Experience</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-<div class="cv-button">
-  <a href="Md_Mahmodul_Hasan_CV.docx" download>Download CV</a>
-</div>
+  <img src="profile.jpg" alt="Mahmodul Hasan" class="profile-pic" />
 
-<div class="section" id="about">
-  <h2>About Me</h2>
-  <p>I am a certified Safety Specialist with training in IOSH, OSHA, and Fire Safety Management. I have hands-on experience in real-world safety systems and am currently pursuing my BBA in Management at National University. I am fluent in Bengali and English and passionate about creating a safe work environment.</p>
-</div>
+  <section id="about">
+    <h2>About Me</h2>
+    <p>Phone: <a href="tel:+8801721125993">01721125993</a></p>
+    <p>Email: <a href="mailto:mmahmodul24@gmail.com">mmahmodul24@gmail.com</a></p>
+    <p>Address: Sreepur, Gazipur, Dhaka, Bangladesh</p>
+    <p>Education: BBA in Management (National University)</p>
+    <p>Languages: Bengali (Native), English (Fluent)</p>
+  </section>
 
-<div class="section" id="testimonials">
-  <h2>Testimonials</h2>
-  <div class="testimonials">
-    <p class="testimonial">"Mahmodul is one of the most dedicated and professional safety specialists I’ve worked with."
-    <br>— Former Supervisor, Besi Private Ltd</p>
-    <p class="testimonial">"His knowledge in OSHA and real-life training sessions is excellent!"<br>— Safety Coordinator</p>
-  </div>
-</div>
+  <section id="skills">
+    <h2>Skills</h2>
+    <ul>
+      <li>Risk Assessment</li>
+      <li>Hazard Identification</li>
+      <li>Incident Investigation</li>
+      <li>Safety Training</li>
+      <li>Report Writing</li>
+      <li>Microsoft Word, Excel, PowerPoint</li>
+      <li>Communication (Bengali & English)</li>
+    </ul>
+  </section>
 
-<div class="section" id="contact">
-  <h2>Contact Me</h2>
-  <form class="contact-form">
-    <input type="text" placeholder="Your Name" required />
-    <input type="email" placeholder="Your Email" required />
-    <textarea rows="4" placeholder="Your Message" required></textarea>
-    <button type="submit">Send Message</button>
-  </form>
-</div>
+  <section id="certifications">
+    <h2>Certifications</h2>
+    <ul>
+      <li>IOSH</li>
+      <li>OSHA 30 Hours Course</li>
+      <li>Industrial Occupational Health and Safety</li>
+      <li>First Aid CPR</li>
+      <li>Fire Safety Management</li>
+      <li>Scaffolding</li>
+      <li>Lifting and Rigging</li>
+      <li>Conference Space Work at Height</li>
+      <li>Workplace Health and Safety</li>
+      <li>Work Permit Receiver</li>
+    </ul>
+  </section>
 
-<div class="footer">
-  <hr />
-  <p>© মাহমুদুল হাসান</p>
-</div>
+  <section id="experience">
+    <h2>Experience</h2>
+    <p><strong>Besi Private Ltd</strong></p>
+    <p>- Trained in safety management systems and real-world application.</p>
+    <p>- Completed trainings on compliance and emergency management.</p>
+  </section>
 
-  </div>
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <p>Email: <a href="mailto:mmahmodul24@gmail.com">mmahmodul24@gmail.com</a></p>
+    <p>Phone: <a href="tel:+8801721125993">01721125993</a></p>
+    <p class="social-links">
+      <a href="https://www.linkedin.com/in/mahmodul-hasan-0283262b9" target="_blank">LinkedIn</a>
+      <a href="https://www.instagram.com/mahmodul_93" target="_blank">Instagram</a>
+      <a href="https://x.com/mmahmodul24" target="_blank">X (Twitter)</a>
+      <a href="https://www.facebook.com/share/1ADwbWP3Q3/" target="_blank">Facebook</a>
+    </p>
+    <a class="btn" href="Md_Mahmodul_Hasan_CV.docx" download>Download My CV</a>
+  </section>
+
+  <footer style="text-align:center; margin-top: 50px;">
+    <p>Contact: <a href="mailto:mmahmodul24@gmail.com">mmahmodul24@gmail.com</a></p>
+    <p>&copy; মাহমুদুল হাসান</p>
+  </footer>
+
 </body>
 </html>
