--- a/index.html
+++ b/index.html
@@ -14,40 +14,65 @@
       margin: 0;
       background: #f0f8ff;
       color: #003366;
+      line-height: 1.6;
     }
+
     header {
       background: #003366;
       color: white;
-      padding: 2rem;
+      padding: 2rem 1rem;
       text-align: center;
     }
+
+    nav {
+      margin-top: 1rem;
+    }
+
     nav a {
-      margin: 0 1rem;
+      display: inline-block;
+      margin: 0.5rem;
       color: white;
       text-decoration: none;
       font-weight: bold;
     }
+
     section {
-      padding: 2rem;
+      padding: 2rem 1rem;
       border-bottom: 1px solid #cce;
     }
+
     h2 {
       color: #003366;
     }
+
     .profile-pic {
-      width: 150px;
+      width: 120px;
+      max-width: 100%;
       border-radius: 50%;
       margin: 1rem auto;
       display: block;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     }
+
+    ul {
+      padding-left: 1.5rem;
+    }
+
+    .social-links {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1rem;
+      margin-top: 1rem;
+    }
+
     .social-links a {
-      margin-right: 1rem;
       text-decoration: none;
       color: #0077cc;
       font-weight: bold;
-      font-size: 1.2rem;
+      font-size: 1.1rem;
     }
+
     .btn {
       display: inline-block;
       margin-top: 1rem;
@@ -56,22 +81,27 @@
       color: white;
       text-decoration: none;
       border-radius: 5px;
+      font-size: 1rem;
     }
+
     form {
       margin-top: 1rem;
       max-width: 400px;
       margin-left: auto;
       margin-right: auto;
+      padding: 1rem;
     }
+
     input, textarea {
       width: 100%;
-      padding: 0.5rem;
+      padding: 0.6rem;
       margin-top: 0.5rem;
       margin-bottom: 1rem;
       border: 1px solid #ccc;
       border-radius: 5px;
       font-family: 'Roboto', sans-serif;
     }
+
     button {
       background-color: #003366;
       color: white;
@@ -80,6 +110,21 @@
       border-radius: 5px;
       cursor: pointer;
       font-size: 1rem;
+    }
+
+    @media (min-width: 768px) {
+      section {
+        padding: 2rem 4rem;
+      }
+
+      .profile-pic {
+        width: 150px;
+      }
+
+      nav a {
+        margin: 0 1.5rem;
+        font-size: 1.1rem;
+      }
     }
   </style>
 </head>
