--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><!-- Google Site Verification -->
+<meta name="google-site-verification" content="Yke1uxuhXkyFOjzJz9RDCmvxaj513LHnwZnpS3gmvdE" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Md. Mahmodul Hasan - Certified Safety Specialist Portfolio" />
