--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><!-- Google Site Verification -->
+<head><head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Md. Mahmodul Hasan - Portfolio</title>
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Official portfolio website of Md. Mahmodul Hasan, a Safety Specialist and BBA in Management student from Bangladesh.">
+  <meta name="keywords" content="Mahmodul Hasan, Safety Specialist, BBA in Management, Portfolio, Bangladesh, Resume, Safety Officer, Risk Assessment">
+  <meta name="author" content="Md. Mahmodul Hasan">
+
+  <!-- Open Graph for social sharing -->
+  <meta property="og:title" content="Md. Mahmodul Hasan - Portfolio Website">
+  <meta property="og:description" content="Safety Specialist | BBA in Management | Certified Professional">
+  <meta property="og:url" content="https://mahmodulwebsite.github.io/Mdmahmodulhasan/">
+  <meta property="og:type" content="website">
+</head><!-- Google Site Verification -->
 <meta name="google-site-verification" content="Yke1uxuhXkyFOjzJz9RDCmvxaj513LHnwZnpS3gmvdE" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
