--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       <li>Fire Safety Management</li>
       <li>Scaffolding</li>
       <li>Lifting and Rigging</li>
-      <li>Conference Space Work at Height</li>
+      <li>confine Space Work at Height</li>
       <li>Workplace Health and Safety</li>
       <li>Work Permit Receiver</li>
     </ul>
@@ -212,7 +212,7 @@
       <a href="https://www.linkedin.com/in/mahmodul-hasan-0283262b9" target="_blank">LinkedIn</a>
       <a href="https://www.instagram.com/mahmodul_93" target="_blank">Instagram</a>
       <a href="https://x.com/mmahmodul24" target="_blank">X (Twitter)</a>
-      <a href="https://www.facebook.com/share/1ADwbWP3Q3/" target="_blank">Facebook</a>
+      <a href="https://www.facebook.com/share/18yKr4XpiC/" target="_blank">Facebook</a>
     </p>
     <a class="btn" href="Md_Mahmodul_Hasan_CV.docx" download>Download My CV</a>
   </section>
