--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta property="og:image" content="https://mahmodulwebsite.github.io/Mdmahmodulhasan/profile.jpg" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Md. Mahmodul Hasan - Portfolio</title>
@@ -191,7 +192,7 @@
       <li>Fire Safety Management</li>
       <li>Scaffolding</li>
       <li>Lifting and Rigging</li>
-      <li>confine Space Work at Height</li>
+      <li>confined Space/Work at Height</li>
       <li>Workplace Health and Safety</li>
       <li>Work Permit Receiver</li>
     </ul>
