--- a/index.html
+++ b/index.html
@@ -207,15 +207,17 @@
 
   <section id="contact">
     <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:mmahmodul24@gmail.com">mmahmodul24@gmail.com</a></p>
-    <p>Phone: <a href="tel:+8801721125993">01721125993</a></p>
-    <p class="social-links">
-      <a href="https://www.linkedin.com/in/mahmodul-hasan-0283262b9" target="_blank">LinkedIn</a>
-      <a href="https://www.instagram.com/mahmodul_93" target="_blank">Instagram</a>
-      <a href="https://x.com/mmahmodul24" target="_blank">X (Twitter)</a>
-      <a href="https://www.facebook.com/share/18yKr4XpiC/" target="_blank">Facebook</a>
-    </p>
-    <a class="btn" href="Md_Mahmodul_Hasan_CV.docx" download>Download My CV</a>
+    <!-- তোমার মূল কোডের পর Contact Section শেষ -->
+
+  <section id="social-media">
+    <h2 style="text-align: center;">Social Media</h2>
+    <ul style="list-style-type: disc; padding-left: 2rem; font-size: 1.1rem;">
+      <li><a href="https://www.facebook.com/share/18yKr4XpiC/" target="_blank">Facebook</a></li>
+      <li><a href="https://x.com/mmahmodul24" target="_blank">Twitter (X)</a></li>
+      <li><a href="https://www.instagram.com/mahmodul_93" target="_blank">Instagram</a></li>
+      <li><a href="https://t.me/Mahmodul01" target="_blank">Telegram</a></li>
+      <li><a href="https://www.linkedin.com/in/mahmodul-hasan-0283262b9" target="_blank">LinkedIn</a></li>
+    </ul>
   </section>
 
   <footer style="text-align:center; margin-top: 50px;">
