--- a/index.html
+++ b/index.html
@@ -161,11 +161,32 @@
   <img src="profile.jpg" alt="Mahmodul Hasan" class="profile-pic" />
 
   <section id="about">
-    <h2>About Me</h2>
-    <p>Phone: <a href="tel:+8801721125993">01721125993</a></p>
-    <p>Email: <a href="mailto:mmahmodul24@gmail.com">mmahmodul24@gmail.com</a></p>
-    <p>Address: Sreepur, Gazipur, Dhaka, Bangladesh</p>
-    <p>Education: BBA in Management (National University)</p>
+  <h2>About Me</h2>
+  <p>Hello! I'm <strong>Md. Mahmodul Hasan</strong>, a dedicated student of BBA in Management and an internationally certified Safety Specialist. I am passionate about creating safer workplaces through training, awareness, and effective safety management.</p>
+
+  <h3>Professional Skills</h3>
+  <ul>
+    <li>Certified in IOSH, OSHA 30 Hours, Fire Safety, First Aid, Work at Height, etc.</li>
+    <li>Computer proficiency: MS Office, IT Troubleshooting, Internet Tools</li>
+    <li>Languages: Fluent in Bengali and English</li>
+  </ul>
+
+  <h3>Achievements & Experience</h3>
+  <p>I have successfully completed <strong>10+</strong> international certifications through Besi Private Ltd. and gained <strong>2+ years</strong> of hands-on experience in health and safety practices.</p>
+
+  <h3>Goals</h3>
+  <p>My goal is to become a professional Safety Consultant and help industries implement smarter and safer systems that protect workers and improve productivity.</p>
+
+  <h3>Personal Information</h3>
+  <ul>
+    <li><strong>Phone:</strong> <a href="tel:+8801721125993">01721125993</a></li>
+    <li><strong>Email:</strong> <a href="mailto:mmahmodul24@gmail.com">mmahmodul24@gmail.com</a></li>
+    <li><strong>Location:</strong> Sreepur, Gazipur, Dhaka, Bangladesh</li>
+    <li><strong>Education:</strong> BBA in Management (National University)</li>
+  </ul>
+
+  <h3>Hobbies & Interests</h3>
+  <p>I enjoy learning about technology, participating in safety seminars, and being involved in social development initiatives.</p>
     <p>Languages: Bengali (Native), English (Fluent)</p>
   </section>
 
