--- a/index.html
+++ b/index.html
@@ -225,7 +225,34 @@
     <p>- Trained in safety management systems and real-world application.</p>
     <p>- Completed trainings on compliance and emergency management.</p>
   </section>
+</section> <!-- Experience section ends -->
 
+<section id="why-safety-matters" style="background-color:#eaf6ff; padding: 2rem; margin-top: 3rem;">
+  <h2 style="text-align: center; color: #003366;">Why Safety Matters</h2>
+  <p style="font-size: 1.1rem; color: #333; max-width: 800px; margin: auto; line-height: 1.8;">
+    Many people think, "Accidents can happen anywhere," but the real question is—<strong>if it can be prevented, shouldn't we do something about it?</strong>
+  </p>
+
+  <p style="font-size: 1.1rem; color: #333; max-width: 800px; margin: auto; line-height: 1.8;">
+    Safety is not just about wearing a helmet or having a fire extinguisher nearby. It’s a mindset, a culture of responsibility, and a commitment to protecting lives.
+  </p>
+
+  <p style="font-size: 1.1rem; color: #333; max-width: 800px; margin: auto; line-height: 1.8;">
+    When safety is neglected, the consequences can be devastating:
+  </p>
+
+  <ul style="max-width: 800px; margin: auto; font-size: 1.05rem; padding-left: 2rem; color: #333;">
+    <li>Serious injuries or even death</li>
+    <li>Financial losses for individuals and companies</li>
+    <li>Legal complications and damage to reputation</li>
+    <li>Loss of productivity and employee morale</li>
+  </ul>
+
+  <p style="font-size: 1.1rem; color: #333; max-width: 800px; margin: auto; line-height: 1.8; text-align: center; margin-top: 2rem;">
+    <strong>Every safety measure, no matter how small, plays a big role in preventing harm.</strong><br>
+    Let’s build a safer future together. Because safety isn’t just a rule—it’s a responsibility.
+  </p>
+</section>
   <section id="contact">
     <h2>Contact Me</h2>
     <!-- তোমার মূল কোডের পর Contact Section শেষ -->
