--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta property="og:image" content="https://mahmodulwebsite.github.io/Mdmahmodulhasan/profile.jpg" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Md. Mahmodul Hasan - Portfolio</title>
@@ -14,7 +13,8 @@
   <!-- Open Graph for social sharing -->
   <meta property="og:title" content="Md. Mahmodul Hasan - Portfolio Website">
   <meta property="og:description" content="Safety Specialist | BBA in Management | Certified Professional">
-  <meta property="og:url" content="https://mahmodulwebsite.github.io/Mdmahmodulhasan/">
+  <meta property="og:image" content="https://mahmodulwebsite.github.io/Mdmahmodulhasan/profile.jpg" />
+  <meta property="og:url" content="https://mahmodulwebsite.github.io/Mdmahmodulhasan/" />
   <meta property="og:type" content="website">
 
   <!-- Google Site Verification -->
@@ -161,6 +161,13 @@
 
     footer input, footer textarea {
       border: 1px solid #88a;
+      background-color: #002244;
+      color: white;
+    }
+
+    footer input::placeholder,
+    footer textarea::placeholder {
+      color: #ccc;
     }
 
     #scrollTopBtn {
@@ -325,4 +332,4 @@
     }
   </script>
 </body>
-</html>
+  </html>
