--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     <p>My goal is to become a professional Safety Consultant and help industries implement smarter and safer systems that protect workers and improve productivity.</p>
     <h3>Personal Information</h3>
     <ul>
-      <li><strong>Phone:</strong> <a href="tel:+8801721125993">01721125993</a></li>
+      <li><strong>Phone:</strong> <a href="tel:+8801721125993">+8801721125993</a></li>
       <li><strong>Email:</strong> <a href="mailto:mmahmodul24@gmail.com">mmahmodul24@gmail.com</a></li>
       <li><strong>Location:</strong> Sreepur, Gazipur, Dhaka, Bangladesh</li>
       <li><strong>Education:</strong> BBA in Management (National University)</li>
