--- a/index.html
+++ b/index.html
@@ -267,29 +267,34 @@
     <p>- Completed trainings on compliance and emergency management.</p>
   </section>
 
-  <section id="why-safety-matters" style="background-color:#eaf6ff; padding: 2rem; margin-top: 3rem;">
-    <h2 style="text-align: center; color: #003366;">Why Safety Matters</h2>
-    <p style="font-size: 1.1rem; color: #333; max-width: 800px; margin: auto; line-height: 1.8;">
-      Many people think, "Accidents can happen anywhere," but the real question is—<strong>if it can be prevented, shouldn't we do something about it?</strong>
+  <section id="why-safety-matters" style="background-color:#eaf6ff; padding: 3rem 1rem; margin-top: 3rem;">
+  <h2 style="text-align: center; color: #003366; font-size: 2rem; margin-bottom: 1rem;">Why Safety Matters</h2>
+  <div style="max-width: 850px; margin: auto; font-size: 1.1rem; color: #333; line-height: 1.8;">
+    <p style="text-align: center; font-style: italic;">
+      "Accidents can happen anywhere, but if we can prevent them—<strong>shouldn't we?</strong>"
     </p>
-    <p style="font-size: 1.1rem; color: #333; max-width: 800px; margin: auto; line-height: 1.8;">
-      Safety is not just about wearing a helmet or having a fire extinguisher nearby. It’s a mindset, a culture of responsibility, and a commitment to protecting lives.
-    </p>
-    <p style="font-size: 1.1rem; color: #333; max-width: 800px; margin: auto; line-height: 1.8;">
-      When safety is neglected, the consequences can be devastating:
-    </p>
-    <ul style="max-width: 800px; margin: auto; font-size: 1.05rem; padding-left: 2rem; color: #333;">
-      <li>Serious injuries or even death</li>
-      <li>Financial losses for individuals and companies</li>
-      <li>Legal complications and damage to reputation</li>
-      <li>Loss of productivity and employee morale</li>
-    </ul>
-    <p style="font-size: 1.1rem; color: #333; max-width: 800px; margin: auto; line-height: 1.8; text-align: center; margin-top: 2rem;">
-      <strong>Every safety measure, no matter how small, plays a big role in preventing harm.</strong><br>
-      Let’s build a safer future together. Because safety isn’t just a rule—it’s a responsibility.
-    </p>
-  </section>
 
+    <p>
+      Safety is more than just wearing a helmet or keeping a fire extinguisher nearby. It’s a mindset, a culture of responsibility, and a commitment to protecting lives. Every safety measure—no matter how small—plays a big role in preventing harm.
+    </p>
+
+    <h3 style="color: #003366; margin-top: 2rem;">Neglecting Safety Can Lead To:</h3>
+    <ul style="padding-left: 1.5rem; margin-top: 1rem;">
+      <li>Serious injuries or fatalities</li>
+      <li>Financial losses for individuals and organizations</li>
+      <li>Legal complications and damaged reputations</li>
+      <li>Reduced productivity and employee morale</li>
+    </ul>
+
+    <blockquote style="margin-top: 2rem; font-style: italic; background: #dff3ff; padding: 1rem 1.5rem; border-left: 5px solid #1e90ff;">
+      A safe workplace isn't an option—<strong>it's a responsibility we all share.</strong>
+    </blockquote>
+
+    <p style="text-align: center; margin-top: 2rem;">
+      Let’s work together to build a safer, smarter future for everyone.
+    </p>
+  </div>
+  </section>
   <section id="contact">
     <h2>Contact Me</h2>
   </section>
