--- a/index.html
+++ b/index.html
@@ -267,34 +267,41 @@
     <p>- Completed trainings on compliance and emergency management.</p>
   </section>
 
-  <section id="why-safety-matters" style="background-color:#eaf6ff; padding: 3rem 1rem; margin-top: 3rem;">
-  <h2 style="text-align: center; color: #003366; font-size: 2rem; margin-bottom: 1rem;">Why Safety Matters</h2>
-  <div style="max-width: 850px; margin: auto; font-size: 1.1rem; color: #333; line-height: 1.8;">
-    <p style="text-align: center; font-style: italic;">
-      "Accidents can happen anywhere, but if we can prevent them—<strong>shouldn't we?</strong>"
+<section id="why-safety-matters" style="background: linear-gradient(to right, #e0f7ff, #f5fbff); padding: 3rem 1rem; margin-top: 3rem;">
+  <div style="max-width: 1000px; margin: auto;">
+    <h2 style="text-align: center; color: #003366; font-size: 2.2rem; margin-bottom: 1rem;">Why Safety Matters</h2>
+    <p style="text-align: center; font-size: 1.2rem; color: #555; font-style: italic; max-width: 700px; margin: auto;">
+      "Safety doesn't happen by accident. It's a mindset, a culture, and a responsibility we all share."
     </p>
 
-    <p>
-      Safety is more than just wearing a helmet or keeping a fire extinguisher nearby. It’s a mindset, a culture of responsibility, and a commitment to protecting lives. Every safety measure—no matter how small—plays a big role in preventing harm.
+    <div style="display: flex; flex-wrap: wrap; gap: 2rem; margin-top: 2.5rem;">
+      <div style="flex: 1; min-width: 250px;">
+        <p style="font-size: 1.05rem; color: #333;">
+          Many people think, “Accidents can happen anytime,” but the real question is—<strong>if it can be prevented, shouldn’t we do something about it?</strong> 
+          Safety is not just a rulebook; it’s a culture that saves lives and ensures everyone goes home safe.
+        </p>
+      </div>
+
+      <div style="flex: 1; min-width: 250px;">
+        <ul style="font-size: 1.05rem; color: #003366; list-style: none; padding-left: 0;">
+          <li>✔ Serious injuries or even death</li>
+          <li>✔ Financial and legal consequences</li>
+          <li>✔ Damaged reputation of a company</li>
+          <li>✔ Loss in productivity & morale</li>
+        </ul>
+      </div>
+    </div>
+
+    <p style="text-align: center; font-size: 1.1rem; color: #222; margin-top: 2rem;">
+      <strong>Every small action toward safety builds a strong foundation for a better tomorrow.</strong><br>
+      Let’s commit today, for a safer workplace and a brighter future.
     </p>
-
-    <h3 style="color: #003366; margin-top: 2rem;">Neglecting Safety Can Lead To:</h3>
-    <ul style="padding-left: 1.5rem; margin-top: 1rem;">
-      <li>Serious injuries or fatalities</li>
-      <li>Financial losses for individuals and organizations</li>
-      <li>Legal complications and damaged reputations</li>
-      <li>Reduced productivity and employee morale</li>
-    </ul>
-
-    <blockquote style="margin-top: 2rem; font-style: italic; background: #dff3ff; padding: 1rem 1.5rem; border-left: 5px solid #1e90ff;">
-      A safe workplace isn't an option—<strong>it's a responsibility we all share.</strong>
-    </blockquote>
-
-    <p style="text-align: center; margin-top: 2rem;">
-      Let’s work together to build a safer, smarter future for everyone.
-    </p>
+    
+    <div style="text-align: center; margin-top: 1.5rem;">
+      <a href="#contact" class="btn" style="background-color: #0055aa; padding: 10px 25px; font-size: 1rem; border-radius: 5px;">Get in Touch to Promote Safety</a>
+    </div>
   </div>
-  </section>
+</section>
   <section id="contact">
     <h2>Contact Me</h2>
   </section>
