--- a/index.html
+++ b/index.html
@@ -318,12 +318,68 @@
   </section>
 
   <footer>
-    <h3>Send Me a Message</h3>
-    <form action="mailto:mmahmodul24@gmail.com" method="post" enctype="text/plain">
-      <input type="text" name="name" placeholder="Your Name" required />
-      <input type="email" name="email" placeholder="Your Email" required />
-      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
+    <section id="contact" style="background-color: #f4f9ff; padding: 4rem 1rem;">
+  <div style="max-width: 900px; margin: auto;">
+    <h2 style="text-align: center; font-size: 2.2rem; color: #003366; margin-bottom: 0.5rem;">Send Me a Message</h2>
+    <p style="text-align: center; font-size: 1.1rem; color: #555; margin-bottom: 2.5rem;">
+      Got a question, collaboration idea, or need safety consultation? I’m here to help.
+    </p>
+
+    <form id="contactForm" style="background: #fff; padding: 2rem; border-radius: 10px; box-shadow: 0 0 15px rgba(0,0,0,0.1);">
+      <div style="display: flex; flex-wrap: wrap; gap: 1.5rem;">
+        <div style="flex: 1; min-width: 250px;">
+          <label for="name" style="font-weight: 600; color: #333;">Your Name</label><br>
+          <input type="text" id="name" required style="width: 100%; padding: 10px; margin-top: 5px; border: 1px solid #ccc; border-radius: 5px;">
+        </div>
+        <div style="flex: 1; min-width: 250px;">
+          <label for="email" style="font-weight: 600; color: #333;">Your Email</label><br>
+          <input type="email" id="email" required style="width: 100%; padding: 10px; margin-top: 5px; border: 1px solid #ccc; border-radius: 5px;">
+        </div>
+      </div>
+
+      <div style="margin-top: 1.5rem;">
+        <label for="message" style="font-weight: 600; color: #333;">Your Message</label><br>
+        <textarea id="message" rows="6" required style="width: 100%; padding: 10px; margin-top: 5px; border: 1px solid #ccc; border-radius: 5px;"></textarea>
+      </div>
+
+      <div style="text-align: center; margin-top: 2rem;">
+        <button type="submit" style="background-color: #0055aa; color: white; padding: 12px 30px; border: none; border-radius: 5px; font-size: 1rem; cursor: pointer;">
+          Send Message
+        </button>
+      </div>
+    </form>
+
+    <div id="toast" style="display: none; margin-top: 2rem; text-align: center; color: green; font-weight: 600;"></div>
+  </div>
+</section>
+
+<script>
+  const form = document.getElementById('contactForm');
+  const toast = document.getElementById('toast');
+
+  form.addEventListener('submit', function(e) {
+    e.preventDefault(); // Prevent actual form submission
+
+    const name = document.getElementById('name').value.trim();
+    const email = document.getElementById('email').value.trim();
+    const message = document.getElementById('message').value.trim();
+
+    if (!name || !email || !message) {
+      toast.style.display = 'block';
+      toast.style.color = 'red';
+      toast.textContent = 'Please fill in all fields correctly.';
+      return;
+    }
+
+    // Show success message
+    toast.style.display = 'block';
+    toast.style.color = 'green';
+    toast.textContent = 'Your message has been sent successfully!';
+
+    // Optionally reset the form
+    form.reset();
+  });
+</script>
     </form>
     <p style="margin-top:20px;">&copy; মাহমুদুল হাসান-২০২৫</p>
   </footer>
