--- a/index.html
+++ b/index.html
@@ -305,8 +305,6 @@
   <section id="contact">
     <h2>Contact Me</h2>
   </section>
-
-  <section id="social-media">
     <h2 style="text-align: center;">Social Media</h2>
     <ul style="list-style-type: disc; padding-left: 2rem; font-size: 1.1rem;">
       <li><a href="https://www.facebook.com/share/18yKr4XpiC/" target="_blank">Facebook</a></li>
@@ -318,38 +316,27 @@
   </section>
 
   <footer>
-    <section id="contact" style="background-color: #f4f9ff; padding: 4rem 1rem;">
-  <div style="max-width: 900px; margin: auto;">
-    <h2 style="text-align: center; font-size: 2.2rem; color: #003366; margin-bottom: 0.5rem;">Send Me a Message</h2>
-    <p style="text-align: center; font-size: 1.1rem; color: #555; margin-bottom: 2.5rem;">
-      Got a question, collaboration idea, or need safety consultation? I’m here to help.
+    <section id="contact" style="background: #f4f9ff; padding: 2.5rem 1rem;">
+  <div style="max-width: 600px; margin: auto;">
+    <h2 style="text-align: center; font-size: 1.9rem; color: #003366; margin-bottom: 0.3rem;">Send Me a Message</h2>
+    <p style="text-align: center; font-size: 1rem; color: #666; margin-bottom: 1.5rem;">
+      Feel free to reach out for collaborations, safety consultations, or just to say hello!
     </p>
 
-    <form id="contactForm" style="background: #fff; padding: 2rem; border-radius: 10px; box-shadow: 0 0 15px rgba(0,0,0,0.1);">
-      <div style="display: flex; flex-wrap: wrap; gap: 1.5rem;">
-        <div style="flex: 1; min-width: 250px;">
-          <label for="name" style="font-weight: 600; color: #333;">Your Name</label><br>
-          <input type="text" id="name" required style="width: 100%; padding: 10px; margin-top: 5px; border: 1px solid #ccc; border-radius: 5px;">
-        </div>
-        <div style="flex: 1; min-width: 250px;">
-          <label for="email" style="font-weight: 600; color: #333;">Your Email</label><br>
-          <input type="email" id="email" required style="width: 100%; padding: 10px; margin-top: 5px; border: 1px solid #ccc; border-radius: 5px;">
-        </div>
+    <form id="contactForm" style="background: #ffffff; padding: 1.5rem; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 85, 170, 0.1);">
+      <div style="display: flex; flex-direction: column; gap: 1rem;">
+        <input type="text" id="name" placeholder="Your Name" required style="padding: 10px 15px; border: 1px solid #ddd; border-radius: 6px;">
+        <input type="email" id="email" placeholder="Your Email" required style="padding: 10px 15px; border: 1px solid #ddd; border-radius: 6px;">
+        <textarea id="message" rows="4" placeholder="Your Message" required style="padding: 10px 15px; border: 1px solid #ddd; border-radius: 6px;"></textarea>
       </div>
-
-      <div style="margin-top: 1.5rem;">
-        <label for="message" style="font-weight: 600; color: #333;">Your Message</label><br>
-        <textarea id="message" rows="6" required style="width: 100%; padding: 10px; margin-top: 5px; border: 1px solid #ccc; border-radius: 5px;"></textarea>
-      </div>
-
-      <div style="text-align: center; margin-top: 2rem;">
-        <button type="submit" style="background-color: #0055aa; color: white; padding: 12px 30px; border: none; border-radius: 5px; font-size: 1rem; cursor: pointer;">
-          Send Message
+      <div style="text-align: right; margin-top: 1.2rem;">
+        <button type="submit" style="background-color: #0055aa; color: white; padding: 10px 25px; border: none; border-radius: 5px; font-size: 1rem; cursor: pointer;">
+          Send
         </button>
       </div>
     </form>
 
-    <div id="toast" style="display: none; margin-top: 2rem; text-align: center; color: green; font-weight: 600;"></div>
+    <div id="toast" style="display: none; margin-top: 1rem; text-align: center; font-weight: 600;"></div>
   </div>
 </section>
 
@@ -358,7 +345,7 @@
   const toast = document.getElementById('toast');
 
   form.addEventListener('submit', function(e) {
-    e.preventDefault(); // Prevent actual form submission
+    e.preventDefault();
 
     const name = document.getElementById('name').value.trim();
     const email = document.getElementById('email').value.trim();
@@ -367,17 +354,15 @@
     if (!name || !email || !message) {
       toast.style.display = 'block';
       toast.style.color = 'red';
-      toast.textContent = 'Please fill in all fields correctly.';
+      toast.textContent = 'Please fill out all fields correctly.';
       return;
     }
 
-    // Show success message
     toast.style.display = 'block';
     toast.style.color = 'green';
-    toast.textContent = 'Your message has been sent successfully!';
-
-    // Optionally reset the form
+    toast.textContent = 'Message sent successfully!';
     form.reset();
+</script>
   });
 </script>
     </form>
