--- a/index.html
+++ b/index.html
@@ -300,6 +300,11 @@
     <div style="text-align: center; margin-top: 1.5rem;">
       <a href="#contact" class="btn" style="background-color: #0055aa; padding: 10px 25px; font-size: 1rem; border-radius: 5px;">Get in Touch to Promote Safety</a>
     </div>
+    <div style="text-align: center; margin-top: 1rem;">
+  <a href="safety-laws.html" class="btn" style="background-color: #0077cc; padding: 10px 25px; font-size: 1rem; border-radius: 5px;">
+    Learn More About Safety Rules
+  </a>
+    </div>
   </div>
 </section>
   <section id="contact">
@@ -387,4 +392,4 @@
   <!-- অন্য সব কনটেন্ট শেষ -->
 
 </body>
-</html>
+    </html>
