--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><meta name="description" content="Md. Mahmodul Hasan - Certified Safety Specialist with IOSH, OSHA, Fire Safety, and Industrial Occupational Health and Safety certifications.">
+<meta name="keywords" content="Mahmodul Hasan, Safety Specialist, IOSH, OSHA, Fire Safety, Health and Safety, BBA Management">
+<meta name="author" content="Md. Mahmodul Hasan">
+<title>Md. Mahmodul Hasan | Safety Specialist</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Md. Mahmodul Hasan - Portfolio</title>
