--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><meta name="description" content="Md. Mahmodul Hasan - Certified Safety Specialist with IOSH, OSHA, Fire Safety, and Industrial Occupational Health and Safety certifications.">
+<head>
+  <meta name="msvalidate.01" content="2226E282F9379E418B979D5BA0FBD6D1" />
+  
+<meta name="description" content="Md. Mahmodul Hasan - Certified Safety Specialist with IOSH, OSHA, Fire Safety, and Industrial Occupational Health and Safety certifications.">
 <meta name="keywords" content="Mahmodul Hasan, Safety Specialist, IOSH, OSHA, Fire Safety, Health and Safety, BBA Management">
 <meta name="author" content="Md. Mahmodul Hasan">
 <title>Md. Mahmodul Hasan | Safety Specialist</title>
