--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 <meta name="description" content="Md. Mahmodul Hasan - Certified Safety Specialist with IOSH, OSHA, Fire Safety, and Industrial Occupational Health and Safety certifications.">
 <meta name="keywords" content="Mahmodul Hasan, Safety Specialist, IOSH, OSHA, Fire Safety, Health and Safety, BBA Management">
 <meta name="author" content="Md. Mahmodul Hasan">
+  <title>Mahmodul Hasan | মাহমুদুল হাসান - Safety Specialist</title>
+<meta name="description" content="Mahmodul Hasan (মাহমুদুল হাসান) is a certified safety specialist in Bangladesh with expertise in risk assessment, compliance, and training.">
+<meta name="keywords" content="Mahmodul Hasan, মাহমুদুল হাসান, Mahmudul Hasan, safety expert, সেফটি স্পেশালিস্ট">
+<meta name="author" content="Mahmodul Hasan">
 <title>Md. Mahmodul Hasan | Safety Specialist</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -33,7 +37,9 @@
       scroll-behavior: smooth;
     }
 
-    body {
+    body 
+    <h1>Mahmodul Hasan (মাহমুদুল হাসান)</h1>
+<p>Welcome! This is the official site of <strong>Mahmodul Hasan</strong>, also known as <strong>মাহমুদুল হাসান</strong> — a dedicated safety specialist. If you searched for either name, you're in the right place.</p>{
       font-family: 'Roboto', sans-serif;
       margin: 0;
       background: #f0f8ff;
