--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 <meta name="author" content="Md. Mahmodul Hasan">
 <title>Md. Mahmodul Hasan | Safety Specialist</title>
   <meta charset="UTF-8" />
+  <!-- Multilingual SEO Optimization -->
+<meta name="description" lang="en" content="Mahmodul Hasan is a certified Safety Specialist from Bangladesh with IOSH, OSHA, and other safety training certifications.">
+<meta name="description" lang="bn" content="মাহমুদুল হাসান একজন আন্তর্জাতিকভাবে স্বীকৃত নিরাপত্তা বিশেষজ্ঞ, যিনি বাংলাদেশ থেকে IOSH, OSHA ও অন্যান্য প্রশিক্ষণ সম্পন্ন করেছেন।">
+
+<!-- Keywords in both English and Bengali -->
+<meta name="keywords" content="Mahmodul Hasan, মাহমুদুল হাসান, Safety Specialist, সেফটি স্পেশালিস্ট, IOSH, OSHA, BBA, Bangladesh, নিরাপত্তা অফিসার, হেলথ অ্যান্ড সেফটি, Risk Assessment">
+
+<!-- Bengali language alternate -->
+<link rel="alternate" hreflang="bn" href="https://mahmodulwebsite.github.io/Mdmahmodulhasan/" />
+<link rel="alternate" hreflang="en" href="https://mahmodulwebsite.github.io/Mdmahmodulhasan/" />
+
+<!-- Title variations -->
+<title>Mahmodul Hasan | মাহমুদুল হাসান | Safety Specialist</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Md. Mahmodul Hasan - Portfolio</title>
 
