--- a/index.html
+++ b/index.html
@@ -29,12 +29,33 @@
   <meta name="keywords" content="Mahmodul Hasan, Safety Specialist, BBA in Management, Portfolio, Bangladesh, Resume, Safety Officer, Risk Assessment">
   <meta name="author" content="Md. Mahmodul Hasan">
 
-  <!-- Open Graph for social sharing -->
-  <meta property="og:title" content="Md. Mahmodul Hasan - Portfolio Website">
-  <meta property="og:description" content="Safety Specialist | BBA in Management | Certified Professional">
-  <meta property="og:image" content="https://mahmodulwebsite.github.io/Mdmahmodulhasan/profile.jpg" />
-  <meta property="og:url" content="https://mahmodulwebsite.github.io/Mdmahmodulhasan/" />
-  <meta property="og:type" content="website">
+<!-- Open Graph / Facebook -->
+<meta property="og:title" content="Md. Mahmodul Hasan - Certified Safety Specialist" />
+<meta property="og:description" content="Experienced IOSH, OSHA & Fire Safety Management specialist from Bangladesh." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://mahmodulwebsite.github.io/Mdmahmodulhasan/" />
+<meta property="og:image" content="https://mahmodulwebsite.github.io/Mdmahmodulhasan/assets/og-image.jpg" />
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Md. Mahmodul Hasan - Certified Safety Specialist" />
+<meta name="twitter:description" content="Experienced IOSH, OSHA & Fire Safety Management specialist from Bangladesh." />
+<meta name="twitter:image" content="https://mahmodulwebsite.github.io/Mdmahmodulhasan/assets/og-image.jpg" />
+
+<!-- Favicon -->
+<link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+
+<!-- Apple Touch Icon -->
+<link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png" />
+
+<!-- Android Chrome Icon -->
+<link rel="icon" type="image/png" sizes="192x192" href="assets/android-chrome-192x192.png" />
+
+<!-- Smaller Icons -->
+<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png" />
+
 
   <!-- Google Site Verification -->
   <meta name="google-site-verification" content="Yke1uxuhXkyFOjzJz9RDCmvxaj513LHnwZnpS3gmvdE" />
