--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta name="msvalidate.01" content="2226E282F9379E418B979D5BA0FBD6D1" />
+ <meta name="msvalidate.01" content="B1F14FC741026BAE266A49D99E170ABF" />
   
 <meta name="description" content="Md. Mahmodul Hasan - Certified Safety Specialist with IOSH, OSHA, Fire Safety, and Industrial Occupational Health and Safety certifications.">
 <meta name="keywords" content="Mahmodul Hasan, Safety Specialist, IOSH, OSHA, Fire Safety, Health and Safety, BBA Management">
